--- a/app/src/main/res/layout/activity_add_item_numbers.xml
+++ b/app/src/main/res/layout/activity_add_item_numbers.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.smartcalsvendingmachine.VendingMachineUI.Employee.AddItemNumbers">
+    tools:context="com.smartcalsvendingmachine.VendingMachineUI.EmployeeUI.AddItemNumbers">
 
     <TableLayout
         android:id="@+id/item_table"
