--- a/app/src/main/res/layout/activity_customer_buy_card.xml
+++ b/app/src/main/res/layout/activity_customer_buy_card.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.smartcalsvendingmachine.VendingMachineUI.Customer.CustomerBuyCard">
+    tools:context="com.smartcalsvendingmachine.VendingMachineUI.CustomerUI.CustomerBuyCard">
 
     <TextView
         android:layout_width="match_parent"
