--- a/app/src/main/res/layout/activity_customer_item_type.xml
+++ b/app/src/main/res/layout/activity_customer_item_type.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.smartcalsvendingmachine.VendingMachineUI.Customer.CustomerItemType">
+    tools:context="com.smartcalsvendingmachine.VendingMachineUI.CustomerUI.CustomerItemType">
 
     <Button
         android:id="@+id/drink"
