--- a/app/src/main/res/layout/activity_customer_search.xml
+++ b/app/src/main/res/layout/activity_customer_search.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.smartcalsvendingmachine.VendingMachineUI.Customer.CustomerSearch">
+    tools:context="com.smartcalsvendingmachine.VendingMachineUI.CustomerUI.CustomerSearch">
 
     <TextView
         android:layout_width="wrap_content"
