--- a/app/src/main/res/layout/activity_delete_item.xml
+++ b/app/src/main/res/layout/activity_delete_item.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.smartcalsvendingmachine.VendingMachineUI.Employee.DeleteItem">
+    tools:context="com.smartcalsvendingmachine.VendingMachineUI.EmployeeUI.DeleteItem">
 
     <TextView android:text="@string/items_textview"
         android:layout_width="match_parent"
