--- a/app/src/main/res/layout/activity_employee_options.xml
+++ b/app/src/main/res/layout/activity_employee_options.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.smartcalsvendingmachine.VendingMachineUI.Customer.CustomerOptions">
+    tools:context="com.smartcalsvendingmachine.VendingMachineUI.CustomerUI.CustomerOptions">
 
     <Button
         android:id="@+id/register"
