--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.smartcalsvendingmachine.VendingMachineUI.Customer.ItemDetail">
+    tools:context="com.smartcalsvendingmachine.VendingMachineUI.CustomerUI.ItemDetail">
 
     <LinearLayout
         android:layout_width="match_parent"
