--- a/app/src/main/res/layout/activity_manage_items.xml
+++ b/app/src/main/res/layout/activity_manage_items.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.smartcalsvendingmachine.VendingMachineUI.Employee.ManageItems">
+    tools:context="com.smartcalsvendingmachine.VendingMachineUI.EmployeeUI.ManageItems">
 
     <Button
         android:id="@+id/add_item"
