--- a/app/src/main/res/layout/activity_register_address.xml
+++ b/app/src/main/res/layout/activity_register_address.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.smartcalsvendingmachine.VendingMachineUI.Employee.RegisterAddress">
+    tools:context="com.smartcalsvendingmachine.VendingMachineUI.EmployeeUI.RegisterAddress">
 
     <TextView android:text="@string/address_textview"
         android:layout_width="match_parent"
